--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,28 @@
+alipay==0.7.4
 asgiref==3.5.1
+async-timeout==4.0.2
+certifi==2021.10.8
+cffi==1.15.0
+charset-normalizer==2.0.12
+cryptography==37.0.2
+Deprecated==1.2.13
 Django==4.0.4
+django-redis==5.2.0
 django-simpleui==2022.4.9
+idna==3.3
+mysqlclient==2.1.0
+packaging==21.3
+Pillow==9.1.0
+pycparser==2.21
+pycryptodomex==3.9.4
+pyOpenSSL==19.1.0
+pyparsing==3.0.9
+python-alipay-sdk==3.0.4
+pytz==2022.1
+redis==4.3.1
+requests==2.27.1
+six==1.16.0
 sqlparse==0.4.2
 tzdata==2022.1
+urllib3==1.26.9
+wrapt==1.14.1
